# precorn

./: CMakeLists.txt  LICENSE
src/: alloc_hook.c  fuzzl.c  glib_hooks.c  glib_private.h  inject.c  inject.h  malloc.h  precorn.c  precorn.h  x86_64.c  x86_64.h
src/linux/: x86_64.c
src/osx/: x86_64.c
